update demo script

--- a/2021-05-13/ComputationalOrchestrator/demo/bmnt/bmnt.ipynb
+++ b/2021-05-13/ComputationalOrchestrator/demo/bmnt/bmnt.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,25 +84,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Connect to Secure Computation Enclave\n",
-    "vm1 = connect(\"52.226.73.157\", 7000, \"lbart@igr.com\", \"sailpassword\")\n",
-    "vm2 = connect(\"52.188.148.39\", 7000, \"lbart@igr.com\", \"sailpassword\")\n",
-    "vm3 = connect(\"40.71.121.67\", 7000, \"lbart@igr.com\", \"sailpassword\")\n",
+    "vm1 = connect(\"52.188.164.194\", 7000, \"lbart@igr.com\", \"sailpassword\")\n",
+    "vm2 = connect(\"52.188.125.203\", 7000, \"lbart@igr.com\", \"sailpassword\")\n",
+    "vm3 = connect(\"52.188.164.77\", 7000, \"lbart@igr.com\", \"sailpassword\")\n",
     "\n",
     "# Set up federated computation cluster \n",
     "vms = [vm1, vm2, vm3]\n",
     "\n",
     "# temporary file location\n",
-    "workplace = \"/home/jjj/playground/tmp\""
+    "workplace = \"/home/demo/tmp\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,18 +112,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['AEC7A18D4C954D4E889B673732057BFE',\n",
-       " '29A142A6DC7A4118BE82EF06019FD28F',\n",
-       " '475EA24DA9F840FD8633548889E1FF0F']"
+       "['A8FDC278A68D48F688EF0F728D388226',\n",
+       " '21C309EE92AB425381548C69910C1A25',\n",
+       " '1DC616443CB147E8B9CFE1FB0BA57B86']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
        "[0.5133333333333333, 0.755, 0.7536231884057971, 0.6274165202108963]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
        "[4 rows x 31 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +495,7 @@
        "        5.02375979e-125, 1.20609918e-025, 1.02815701e-015]))"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +567,7 @@
        "         -10.46438221,  -2.74244331,  -1.57863696])]]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,18 +593,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['D25896F6708B42D58694B25BD6D07957399B892847A743B3912272E4FA8CD060',\n",
-       " '7BC1C7758FC446128B2A2DE7CFA4C489399B892847A743B3912272E4FA8CD060',\n",
-       " '18E3E308502B421C9E8192A27A12875A399B892847A743B3912272E4FA8CD060']"
+       "['06D1E74A9A9B4E6D9D911BD0E4AD7D2D3F9D20EAA12C4F829C5800384B6E5D3E',\n",
+       " '79C99C63A79B4B3F8ADEF305007B243D3F9D20EAA12C4F829C5800384B6E5D3E',\n",
+       " 'A400AB1FD4274E18B8631964BBCC32243F9D20EAA12C4F829C5800384B6E5D3E']"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -748,7 +748,7 @@
        "[2 rows x 31 columns]"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -781,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -906,7 +906,7 @@
        "[2 rows x 31 columns]"
       ]
      },
-     "execution_count": 184,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -921,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -930,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1026,7 +1026,7 @@
        "[1 rows x 32 columns]"
       ]
      },
-     "execution_count": 186,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1042,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1057,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1069,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1084,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1097,7 +1097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1108,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1119,7 +1119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1137,7 +1137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1149,7 +1149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1162,7 +1162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1171,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1180,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -1189,7 +1189,7 @@
        "0.9275362491607666"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1201,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
